--- a/observables/punto2.html
+++ b/observables/punto2.html
@@ -13,7 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/8.0.0-alpha.2/rxjs.umd.js"></script>
     <script>
         const { fromEvent, Observable } = rxjs;
-        const { map, switchMap } = rxjs.operators;
+        const { switchMap } = rxjs.operators;
 
         const timeout = 30000;
 
